parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    crossProduct
    determinant
    dotProduct

Grammar

Rule 0     S' -> expression
Rule 1     expression -> term
Rule 2     term -> factor
Rule 3     term -> vector
Rule 4     term -> comma
Rule 5     term -> float
Rule 6     term -> int
Rule 7     term -> matrix
Rule 8     factor -> lCurlyBracket expression rCurlyBracket
Rule 9     factor -> lHardBracket expression rHardBracket
Rule 10    expression -> expression plus vector
Rule 11    expression -> expression minus vector
Rule 12    expression -> expression plus matrix
Rule 13    expression -> expression minus matrix

Terminals, with rules where they appear

comma                : 4
crossProduct         : 
determinant          : 
dotProduct           : 
error                : 
float                : 5
int                  : 6
lCurlyBracket        : 8
lHardBracket         : 9
matrix               : 7 12 13
minus                : 11 13
plus                 : 10 12
rCurlyBracket        : 8
rHardBracket         : 9
vector               : 3 10 11

Nonterminals, with rules where they appear

expression           : 8 9 10 11 12 13 0
factor               : 2
term                 : 1

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . term
    (10) expression -> . expression plus vector
    (11) expression -> . expression minus vector
    (12) expression -> . expression plus matrix
    (13) expression -> . expression minus matrix
    (2) term -> . factor
    (3) term -> . vector
    (4) term -> . comma
    (5) term -> . float
    (6) term -> . int
    (7) term -> . matrix
    (8) factor -> . lCurlyBracket expression rCurlyBracket
    (9) factor -> . lHardBracket expression rHardBracket

    vector          shift and go to state 3
    comma           shift and go to state 6
    float           shift and go to state 7
    int             shift and go to state 8
    matrix          shift and go to state 4
    lCurlyBracket   shift and go to state 9
    lHardBracket    shift and go to state 10

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 5

state 1

    (0) S' -> expression .
    (10) expression -> expression . plus vector
    (11) expression -> expression . minus vector
    (12) expression -> expression . plus matrix
    (13) expression -> expression . minus matrix

    plus            shift and go to state 11
    minus           shift and go to state 12


state 2

    (1) expression -> term .

    plus            reduce using rule 1 (expression -> term .)
    minus           reduce using rule 1 (expression -> term .)
    $end            reduce using rule 1 (expression -> term .)
    rCurlyBracket   reduce using rule 1 (expression -> term .)
    rHardBracket    reduce using rule 1 (expression -> term .)


state 3

    (3) term -> vector .

    plus            reduce using rule 3 (term -> vector .)
    minus           reduce using rule 3 (term -> vector .)
    $end            reduce using rule 3 (term -> vector .)
    rCurlyBracket   reduce using rule 3 (term -> vector .)
    rHardBracket    reduce using rule 3 (term -> vector .)


state 4

    (7) term -> matrix .

    plus            reduce using rule 7 (term -> matrix .)
    minus           reduce using rule 7 (term -> matrix .)
    $end            reduce using rule 7 (term -> matrix .)
    rCurlyBracket   reduce using rule 7 (term -> matrix .)
    rHardBracket    reduce using rule 7 (term -> matrix .)


state 5

    (2) term -> factor .

    plus            reduce using rule 2 (term -> factor .)
    minus           reduce using rule 2 (term -> factor .)
    $end            reduce using rule 2 (term -> factor .)
    rCurlyBracket   reduce using rule 2 (term -> factor .)
    rHardBracket    reduce using rule 2 (term -> factor .)


state 6

    (4) term -> comma .

    plus            reduce using rule 4 (term -> comma .)
    minus           reduce using rule 4 (term -> comma .)
    $end            reduce using rule 4 (term -> comma .)
    rCurlyBracket   reduce using rule 4 (term -> comma .)
    rHardBracket    reduce using rule 4 (term -> comma .)


state 7

    (5) term -> float .

    plus            reduce using rule 5 (term -> float .)
    minus           reduce using rule 5 (term -> float .)
    $end            reduce using rule 5 (term -> float .)
    rCurlyBracket   reduce using rule 5 (term -> float .)
    rHardBracket    reduce using rule 5 (term -> float .)


state 8

    (6) term -> int .

    plus            reduce using rule 6 (term -> int .)
    minus           reduce using rule 6 (term -> int .)
    $end            reduce using rule 6 (term -> int .)
    rCurlyBracket   reduce using rule 6 (term -> int .)
    rHardBracket    reduce using rule 6 (term -> int .)


state 9

    (8) factor -> lCurlyBracket . expression rCurlyBracket
    (1) expression -> . term
    (10) expression -> . expression plus vector
    (11) expression -> . expression minus vector
    (12) expression -> . expression plus matrix
    (13) expression -> . expression minus matrix
    (2) term -> . factor
    (3) term -> . vector
    (4) term -> . comma
    (5) term -> . float
    (6) term -> . int
    (7) term -> . matrix
    (8) factor -> . lCurlyBracket expression rCurlyBracket
    (9) factor -> . lHardBracket expression rHardBracket

    vector          shift and go to state 3
    comma           shift and go to state 6
    float           shift and go to state 7
    int             shift and go to state 8
    matrix          shift and go to state 4
    lCurlyBracket   shift and go to state 9
    lHardBracket    shift and go to state 10

    expression                     shift and go to state 13
    term                           shift and go to state 2
    factor                         shift and go to state 5

state 10

    (9) factor -> lHardBracket . expression rHardBracket
    (1) expression -> . term
    (10) expression -> . expression plus vector
    (11) expression -> . expression minus vector
    (12) expression -> . expression plus matrix
    (13) expression -> . expression minus matrix
    (2) term -> . factor
    (3) term -> . vector
    (4) term -> . comma
    (5) term -> . float
    (6) term -> . int
    (7) term -> . matrix
    (8) factor -> . lCurlyBracket expression rCurlyBracket
    (9) factor -> . lHardBracket expression rHardBracket

    vector          shift and go to state 3
    comma           shift and go to state 6
    float           shift and go to state 7
    int             shift and go to state 8
    matrix          shift and go to state 4
    lCurlyBracket   shift and go to state 9
    lHardBracket    shift and go to state 10

    expression                     shift and go to state 14
    term                           shift and go to state 2
    factor                         shift and go to state 5

state 11

    (10) expression -> expression plus . vector
    (12) expression -> expression plus . matrix

    vector          shift and go to state 15
    matrix          shift and go to state 16


state 12

    (11) expression -> expression minus . vector
    (13) expression -> expression minus . matrix

    vector          shift and go to state 17
    matrix          shift and go to state 18


state 13

    (8) factor -> lCurlyBracket expression . rCurlyBracket
    (10) expression -> expression . plus vector
    (11) expression -> expression . minus vector
    (12) expression -> expression . plus matrix
    (13) expression -> expression . minus matrix

    rCurlyBracket   shift and go to state 19
    plus            shift and go to state 11
    minus           shift and go to state 12


state 14

    (9) factor -> lHardBracket expression . rHardBracket
    (10) expression -> expression . plus vector
    (11) expression -> expression . minus vector
    (12) expression -> expression . plus matrix
    (13) expression -> expression . minus matrix

    rHardBracket    shift and go to state 20
    plus            shift and go to state 11
    minus           shift and go to state 12


state 15

    (10) expression -> expression plus vector .

    plus            reduce using rule 10 (expression -> expression plus vector .)
    minus           reduce using rule 10 (expression -> expression plus vector .)
    $end            reduce using rule 10 (expression -> expression plus vector .)
    rCurlyBracket   reduce using rule 10 (expression -> expression plus vector .)
    rHardBracket    reduce using rule 10 (expression -> expression plus vector .)


state 16

    (12) expression -> expression plus matrix .

    plus            reduce using rule 12 (expression -> expression plus matrix .)
    minus           reduce using rule 12 (expression -> expression plus matrix .)
    $end            reduce using rule 12 (expression -> expression plus matrix .)
    rCurlyBracket   reduce using rule 12 (expression -> expression plus matrix .)
    rHardBracket    reduce using rule 12 (expression -> expression plus matrix .)


state 17

    (11) expression -> expression minus vector .

    plus            reduce using rule 11 (expression -> expression minus vector .)
    minus           reduce using rule 11 (expression -> expression minus vector .)
    $end            reduce using rule 11 (expression -> expression minus vector .)
    rCurlyBracket   reduce using rule 11 (expression -> expression minus vector .)
    rHardBracket    reduce using rule 11 (expression -> expression minus vector .)


state 18

    (13) expression -> expression minus matrix .

    plus            reduce using rule 13 (expression -> expression minus matrix .)
    minus           reduce using rule 13 (expression -> expression minus matrix .)
    $end            reduce using rule 13 (expression -> expression minus matrix .)
    rCurlyBracket   reduce using rule 13 (expression -> expression minus matrix .)
    rHardBracket    reduce using rule 13 (expression -> expression minus matrix .)


state 19

    (8) factor -> lCurlyBracket expression rCurlyBracket .

    plus            reduce using rule 8 (factor -> lCurlyBracket expression rCurlyBracket .)
    minus           reduce using rule 8 (factor -> lCurlyBracket expression rCurlyBracket .)
    $end            reduce using rule 8 (factor -> lCurlyBracket expression rCurlyBracket .)
    rCurlyBracket   reduce using rule 8 (factor -> lCurlyBracket expression rCurlyBracket .)
    rHardBracket    reduce using rule 8 (factor -> lCurlyBracket expression rCurlyBracket .)


state 20

    (9) factor -> lHardBracket expression rHardBracket .

    plus            reduce using rule 9 (factor -> lHardBracket expression rHardBracket .)
    minus           reduce using rule 9 (factor -> lHardBracket expression rHardBracket .)
    $end            reduce using rule 9 (factor -> lHardBracket expression rHardBracket .)
    rCurlyBracket   reduce using rule 9 (factor -> lHardBracket expression rHardBracket .)
    rHardBracket    reduce using rule 9 (factor -> lHardBracket expression rHardBracket .)

